--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -48,7 +48,8 @@
             app:layout_constraintBottom_toTopOf="@id/dd_mood"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_filter" />
+            app:layout_constraintTop_toBottomOf="@id/tv_filter"
+            android:onClick="@{() -> vm.changeFilterOrder()}" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/dd_mood"
@@ -109,7 +110,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dd_mood"
             android:onClick="@{() -> vm.changeFilterChecked()}"
-            android:visibility="@{vm.filterChecked ? View.GONE : View.VISIBLE}"/>
+            android:visibility="@{vm.filterCheckedLD ? View.GONE : View.VISIBLE}"/>
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/reset_button"
@@ -135,7 +136,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dd_mood"
             android:onClick="@{() -> vm.changeFilterChecked()}"
-            android:visibility="@{vm.filterChecked ? View.VISIBLE : View.GONE}"/>
+            android:visibility="@{vm.filterCheckedLD ? View.VISIBLE : View.GONE}"/>
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/placeholder"
