--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -93,6 +93,7 @@
             app:layout_constraintEnd_toEndOf="@id/button_sort"
             android:layout_marginEnd="10dp"
             android:padding="0dp"
+            android:visibility="@{vm.sortCheckedLD ? View.VISIBLE : View.INVISIBLE}"
             />
 
         <ImageView
@@ -104,6 +105,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginTop="15dp"
             android:padding="0dp"
+            android:visibility="@{vm.filterCheckedLD ? View.VISIBLE : View.INVISIBLE}"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
