--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -13,8 +13,8 @@
             type="com.yurakolesnikov.mooddiary.ui.mainActivity.MainActivityViewModel" />
 
         <import type="android.view.View"/>
-        <import type="com.yurakolesnikov.mooddiary.ui.mainActivity.SortOrder"/>
-        <import type="com.yurakolesnikov.mooddiary.ui.mainActivity.FilterOrder"/>
+        <import type="com.yurakolesnikov.mooddiary.utils.SortOrder"/>
+        <import type="com.yurakolesnikov.mooddiary.utils.FilterOrder"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
