--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPagerContainer"
+            android:id="@+id/viewpager_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1">
