--- a/app/src/main/res/drawable/ic_delete_all.xml
+++ b/app/src/main/res/drawable/ic_delete_all.xml
@@ -1,11 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="@dimen/icon"
     android:height="@dimen/icon"
+    android:tint="@color/icon"
     android:viewportWidth="512"
-    android:viewportHeight="512"
-    android:tint="@color/icon">
-  <path
-      android:pathData="M178,1.6c-17.7,3.8 -34.8,17.1 -42.9,33.4 -5.5,11.2 -7.1,19.3 -7.1,36.2l0,13.8 -43.1,-0c-28.3,-0 -44.5,0.4 -47.4,1.1 -2.7,0.7 -6.3,2.8 -9,5.1 -11.2,9.8 -8.8,27.5 4.6,34.2 4.9,2.4 6.2,2.6 18.5,2.6l13.2,-0 0.6,6.2c0.3,3.5 4.4,76.3 9.1,161.8 4.9,90.3 9.1,158.6 9.9,163 2,10.7 5,17.9 10.9,26.2 9.2,12.7 23.4,22.1 38.6,25.3 10.6,2.2 233.9,2.2 244.6,-0 24,-5 44.3,-25.5 49,-49.5 0.9,-4.7 4.6,-65.6 10,-164 4.7,-86.1 8.8,-159.3 9.1,-162.8l0.6,-6.2 13.2,-0c12.2,-0 13.6,-0.2 18.5,-2.6 12.7,-6.4 15.5,-21.9 5.9,-32.8 -6.5,-7.5 -7.3,-7.6 -57.5,-7.6l-43.3,-0 0,-13.8c0,-17 -1.7,-25.1 -7.2,-36.2 -8.4,-16.7 -25.2,-29.7 -43.3,-33.5 -10,-2.1 -145.7,-2.1 -155.5,0.1zM331.3,46c2.1,1.4 5,4.3 6.5,6.4 2.6,3.8 2.7,4.5 3,18.3l0.3,14.3 -85.1,-0 -85.1,-0 0.3,-14.4c0.3,-14.2 0.4,-14.5 3.3,-18.7 1.7,-2.3 5,-5.3 7.4,-6.6l4.5,-2.3 70.6,0.2 70.6,0.3 3.7,2.5zM182,216.8c3.1,1.9 5.2,4.3 7.2,8.1l2.8,5.3 0,67.5c0,50.6 -0.3,68.6 -1.2,71.7 -1.7,5.7 -8.2,11.9 -14.1,13.5 -9.5,2.7 -19.5,-1.3 -24.4,-9.7l-2.8,-4.7 -0.3,-67.4c-0.3,-77.2 -0.5,-75 7.3,-81.9 7.7,-6.8 16.8,-7.6 25.5,-2.4zM265.8,215.9c4.7,2.4 7.7,5.6 9.7,10.3 1.3,3.3 1.5,12.7 1.5,72.5 0,64.8 -0.2,69 -1.9,72.8 -7.6,16.4 -29.8,16.6 -38.2,0.3 -1.8,-3.6 -1.9,-6.8 -1.9,-72.8 0,-60.1 0.2,-69.5 1.5,-72.8 4.8,-11.3 18.1,-16 29.3,-10.3zM346.8,214.2c6.9,1.7 13.6,8.8 15.2,15.9 0.8,3.9 1,23.7 0.8,71.9l-0.3,66.5 -2.8,4.7c-4.9,8.4 -14.9,12.4 -24.4,9.7 -5.9,-1.6 -12.7,-8.1 -14.2,-13.5 -0.7,-2.6 -1.1,-26.6 -1.1,-71.5l0,-67.5 2.6,-5.3c2.8,-5.6 7.9,-9.8 13.6,-11.1 4.7,-1.1 5.4,-1.1 10.6,0.2z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+    android:viewportHeight="512">
+    <path
+        android:fillColor="#000000"
+        android:pathData="M178,1.6c-17.7,3.8 -34.8,17.1 -42.9,33.4 -5.5,11.2 -7.1,19.3 -7.1,36.2l0,13.8 -43.1,-0c-28.3,-0 -44.5,0.4 -47.4,1.1 -2.7,0.7 -6.3,2.8 -9,5.1 -11.2,9.8 -8.8,27.5 4.6,34.2 4.9,2.4 6.2,2.6 18.5,2.6l13.2,-0 0.6,6.2c0.3,3.5 4.4,76.3 9.1,161.8 4.9,90.3 9.1,158.6 9.9,163 2,10.7 5,17.9 10.9,26.2 9.2,12.7 23.4,22.1 38.6,25.3 10.6,2.2 233.9,2.2 244.6,-0 24,-5 44.3,-25.5 49,-49.5 0.9,-4.7 4.6,-65.6 10,-164 4.7,-86.1 8.8,-159.3 9.1,-162.8l0.6,-6.2 13.2,-0c12.2,-0 13.6,-0.2 18.5,-2.6 12.7,-6.4 15.5,-21.9 5.9,-32.8 -6.5,-7.5 -7.3,-7.6 -57.5,-7.6l-43.3,-0 0,-13.8c0,-17 -1.7,-25.1 -7.2,-36.2 -8.4,-16.7 -25.2,-29.7 -43.3,-33.5 -10,-2.1 -145.7,-2.1 -155.5,0.1zM331.3,46c2.1,1.4 5,4.3 6.5,6.4 2.6,3.8 2.7,4.5 3,18.3l0.3,14.3 -85.1,-0 -85.1,-0 0.3,-14.4c0.3,-14.2 0.4,-14.5 3.3,-18.7 1.7,-2.3 5,-5.3 7.4,-6.6l4.5,-2.3 70.6,0.2 70.6,0.3 3.7,2.5zM182,216.8c3.1,1.9 5.2,4.3 7.2,8.1l2.8,5.3 0,67.5c0,50.6 -0.3,68.6 -1.2,71.7 -1.7,5.7 -8.2,11.9 -14.1,13.5 -9.5,2.7 -19.5,-1.3 -24.4,-9.7l-2.8,-4.7 -0.3,-67.4c-0.3,-77.2 -0.5,-75 7.3,-81.9 7.7,-6.8 16.8,-7.6 25.5,-2.4zM265.8,215.9c4.7,2.4 7.7,5.6 9.7,10.3 1.3,3.3 1.5,12.7 1.5,72.5 0,64.8 -0.2,69 -1.9,72.8 -7.6,16.4 -29.8,16.6 -38.2,0.3 -1.8,-3.6 -1.9,-6.8 -1.9,-72.8 0,-60.1 0.2,-69.5 1.5,-72.8 4.8,-11.3 18.1,-16 29.3,-10.3zM346.8,214.2c6.9,1.7 13.6,8.8 15.2,15.9 0.8,3.9 1,23.7 0.8,71.9l-0.3,66.5 -2.8,4.7c-4.9,8.4 -14.9,12.4 -24.4,9.7 -5.9,-1.6 -12.7,-8.1 -14.2,-13.5 -0.7,-2.6 -1.1,-26.6 -1.1,-71.5l0,-67.5 2.6,-5.3c2.8,-5.6 7.9,-9.8 13.6,-11.1 4.7,-1.1 5.4,-1.1 10.6,0.2z"
+        android:strokeColor="#00000000" />
 </vector>
