--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -16,7 +16,7 @@
             name="isAddDialog"
             type="Boolean" />
 
-        <import type="android.view.View"/>
+        <import type="android.view.View" />
 
     </data>
 
@@ -27,7 +27,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_rateYourHappiness"
+            android:id="@+id/tv_rate_your_happiness"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -39,14 +39,14 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_field"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="20dp"
             android:elevation="0dp"
             android:gravity="center"
@@ -57,10 +57,9 @@
             app:boxStrokeColor="@color/color_selector"
             app:boxStrokeWidth="4dp"
             app:boxStrokeWidthFocused="4dp"
-            app:layout_constraintEnd_toStartOf="@id/previewImage"
+            app:layout_constraintEnd_toStartOf="@id/preview_image"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_rateYourHappiness"
-            android:layout_marginStart="40dp">
+            app:layout_constraintTop_toBottomOf="@+id/tv_rate_your_happiness">
 
             <AutoCompleteTextView
                 android:id="@+id/autoCompleteTextView"
@@ -76,67 +75,67 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <ImageView
-            android:id="@+id/previewImage"
+            android:id="@+id/preview_image"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@{vm.previewImage}"
-            app:layout_constraintTop_toTopOf="@id/text_field"
-            app:layout_constraintBottom_toBottomOf="@id/text_field"
-            app:layout_constraintStart_toEndOf="@id/text_field"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="40dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"/>
+            android:layout_marginEnd="40dp"
+            android:src="@{vm.previewImage}"
+            app:layout_constraintBottom_toBottomOf="@id/text_field"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/text_field"
+            app:layout_constraintTop_toTopOf="@id/text_field" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/apply_button"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/icon"
-        android:drawablePadding="10dp"
-        android:onClick="@{() -> fragment.onApplyPressed()}"
-        android:shadowColor="@color/icon"
-        android:text="@string/apply"
-        android:textSize="14dp"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        app:icon="@drawable/ic_check_mark"
-        app:iconSize="@dimen/icon"
-        app:iconTint="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/delete_note_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_field" />
+            android:id="@+id/button_apply"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="@color/icon"
+            android:drawablePadding="10dp"
+            android:onClick="@{() -> fragment.onApplyPressed()}"
+            android:shadowColor="@color/icon"
+            android:text="@string/apply"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="14dp"
+            android:textStyle="bold"
+            app:icon="@drawable/ic_check_mark"
+            app:iconSize="@dimen/icon"
+            app:iconTint="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/button_delete_note"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_field" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/delete_note_button"
+            android:id="@+id/button_delete_note"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginBottom="20dp"
             android:backgroundTint="@color/white"
             android:drawablePadding="10dp"
             android:onClick="@{() -> fragment.onDeleteNotePressed()}"
-            android:shadowColor="@color/icon"
-            android:text="@string/delete_note"
-            android:textSize="14dp"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
+            android:shadowColor="@color/icon"
+            android:shadowRadius="0.1"
+            android:text="@string/delete_note"
             android:textAllCaps="false"
             android:textColor="@color/red"
+            android:textSize="14dp"
             android:textStyle="normal"
+            android:visibility="@{isAddDialog ? View.GONE : View.VISIBLE }"
             app:icon="@drawable/ic_delete_all"
             app:iconSize="@dimen/icon_small"
             app:iconTint="@color/red"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/apply_button"
-            android:visibility="@{isAddDialog ? View.GONE : View.VISIBLE }"
-            android:shadowRadius="0.1"/>
-
+            app:layout_constraintTop_toBottomOf="@id/button_apply" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
