--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -12,7 +12,7 @@
             name="vm"
             type="com.yurakolesnikov.mooddiary.ui.mainActivity.MainActivityViewModel" />
 
-        <import type="android.view.View"/>
+        <import type="android.view.View" />
 
     </data>
 
@@ -38,18 +38,18 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <com.yurakolesnikov.mooddiary.ui.OvalCheckBox
+        <com.yurakolesnikov.mooddiary.ui.customUi.OvalCheckBox
             android:id="@+id/button_more_less"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:layout_marginTop="15dp"
             android:button="@null"
             android:checked="false"
+            android:onClick="@{() -> vm.changeFilterOrder()}"
             app:layout_constraintBottom_toTopOf="@id/dd_mood"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_filter"
-            android:onClick="@{() -> vm.changeFilterOrder()}" />
+            app:layout_constraintTop_toBottomOf="@id/tv_filter" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/dd_mood"
@@ -87,7 +87,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/apply_button"
             android:layout_width="wrap_content"
@@ -96,21 +95,21 @@
             android:layout_marginBottom="20dp"
             android:backgroundTint="@color/icon"
             android:drawablePadding="10dp"
+            android:onClick="@{() -> vm.changeFilterState()}"
             android:shadowColor="@color/icon"
             android:text="@string/apply"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="14dp"
             android:textStyle="bold"
+            android:visibility="@{vm.filterCheckedLd ? View.GONE : View.VISIBLE}"
             app:icon="@drawable/ic_check_mark"
             app:iconSize="@dimen/icon"
             app:iconTint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dd_mood"
-            android:onClick="@{() -> vm.changeFilterState()}"
-            android:visibility="@{vm.filterCheckedLD ? View.GONE : View.VISIBLE}"/>
+            app:layout_constraintTop_toBottomOf="@id/dd_mood" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/reset_button"
@@ -120,6 +119,7 @@
             android:layout_marginBottom="20dp"
             android:backgroundTint="@color/white"
             android:drawablePadding="10dp"
+            android:onClick="@{() -> vm.changeFilterState()}"
             android:paddingEnd="0dp"
             android:shadowColor="@color/icon"
             android:shadowRadius="0.1"
@@ -128,15 +128,14 @@
             android:textColor="@color/red"
             android:textSize="14dp"
             android:textStyle="normal"
+            android:visibility="@{vm.filterCheckedLd ? View.VISIBLE : View.GONE}"
             app:icon="@drawable/ic_delete_all"
             app:iconSize="@dimen/icon_small"
             app:iconTint="@color/red"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dd_mood"
-            android:onClick="@{() -> vm.changeFilterState()}"
-            android:visibility="@{vm.filterCheckedLD ? View.VISIBLE : View.GONE}"/>
+            app:layout_constraintTop_toBottomOf="@id/dd_mood" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/placeholder"
@@ -146,6 +145,7 @@
             android:layout_marginBottom="20dp"
             android:backgroundTint="@color/white"
             android:drawablePadding="10dp"
+            android:enabled="false"
             android:paddingEnd="0dp"
             android:shadowColor="@color/icon"
             android:shadowRadius="0.1"
@@ -154,16 +154,15 @@
             android:textColor="@color/red"
             android:textSize="14dp"
             android:textStyle="normal"
-            android:enabled="false"
+            android:visibility="invisible"
             app:icon="@drawable/ic_delete_all"
             app:iconSize="@dimen/icon_small"
             app:iconTint="@color/red"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dd_mood"
-            android:visibility="invisible"/>
-
+            app:layout_constraintTop_toBottomOf="@id/dd_mood" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
