--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -8,13 +8,17 @@
         <variable
             name="fragment"
             type="com.yurakolesnikov.mooddiary.ui.NavBarFragment" />
+
         <variable
             name="vm"
             type="com.yurakolesnikov.mooddiary.ui.mainActivity.MainActivityViewModel" />
 
-        <import type="android.view.View"/>
-        <import type="com.yurakolesnikov.mooddiary.utils.SortOrder"/>
-        <import type="com.yurakolesnikov.mooddiary.utils.FilterOrder"/>
+        <import type="android.view.View" />
+
+        <import type="com.yurakolesnikov.mooddiary.utils.SortOrder" />
+
+        <import type="com.yurakolesnikov.mooddiary.utils.FilterOrder" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,25 +32,24 @@
             android:layout_height="40dp"
             android:layout_marginStart="40dp"
             android:layout_marginTop="18dp"
-            android:src="@drawable/button_delete_all"
-            android:scaleType="fitCenter"
+            android:background="@android:color/transparent"
             android:onClick="@{() -> fragment.onDeleteAllPressed()}"
+            android:scaleType="fitCenter"
+            android:src="@drawable/button_delete_all"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:visibility="visible"
-            android:background="@android:color/transparent"/>
-
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/button_sort"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:onClick="@{() -> fragment.onSortPressed()}"
-            android:src="@drawable/button_sort"
-            android:scaleType="fitCenter"
-            android:background="@android:color/transparent"
             android:layout_marginTop="18dp"
+            android:background="@android:color/transparent"
+            android:onClick="@{() -> fragment.onSortPressed()}"
+            android:scaleType="fitCenter"
+            android:src="@drawable/button_sort"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_filter"
             app:layout_constraintStart_toEndOf="@id/button_delete_all"
@@ -56,15 +59,15 @@
             android:id="@+id/button_filter"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginEnd="40dp"
-            android:onClick="@{() -> fragment.onFilterPressed()}"
-            android:src="@drawable/button_filter"
-            android:scaleType="fitCenter"
             android:layout_marginTop="18dp"
+            android:layout_marginEnd="40dp"
+            android:background="@android:color/transparent"
+            android:onClick="@{() -> fragment.onFilterPressed()}"
+            android:scaleType="fitCenter"
+            android:src="@drawable/button_filter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_add"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@android:color/transparent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_add"
@@ -88,25 +91,24 @@
         <ImageView
             android:layout_width="5dp"
             android:layout_height="5dp"
-            android:src="@drawable/dot_sort_indicator"
-            app:layout_constraintTop_toTopOf="@id/button_sort"
-            app:layout_constraintEnd_toEndOf="@id/button_sort"
             android:layout_marginEnd="10dp"
             android:padding="0dp"
-            android:visibility="@{vm.sortCheckedLD ? View.VISIBLE : View.INVISIBLE}"
-            />
+            android:src="@drawable/dot_sort_indicator"
+            android:visibility="@{vm.sortCheckedLd ? View.VISIBLE : View.INVISIBLE}"
+            app:layout_constraintEnd_toEndOf="@id/button_sort"
+            app:layout_constraintTop_toTopOf="@id/button_sort" />
 
         <ImageView
             android:layout_width="5dp"
             android:layout_height="5dp"
-            android:src="@drawable/dot_sort_indicator"
-            app:layout_constraintTop_toTopOf="@id/button_filter"
-            app:layout_constraintEnd_toEndOf="@id/button_filter"
-            android:layout_marginEnd="10dp"
             android:layout_marginTop="15dp"
+            android:layout_marginEnd="10dp"
             android:padding="0dp"
-            android:visibility="@{vm.filterCheckedLD ? View.VISIBLE : View.INVISIBLE}"
-            />
+            android:src="@drawable/dot_sort_indicator"
+            android:visibility="@{vm.filterCheckedLd ? View.VISIBLE : View.INVISIBLE}"
+            app:layout_constraintEnd_toEndOf="@id/button_filter"
+            app:layout_constraintTop_toTopOf="@id/button_filter" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
