--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -12,21 +12,12 @@
             name="note"
             type="com.yurakolesnikov.mooddiary.database.model.Note" />
 
-        <variable
-            name="mood"
-            type="Integer" />
-
-        <variable
-            name="itemViewBinding"
-            type="androidx.databinding.ViewDataBinding" />
-
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:onClick="@{() -> fragment.onItemClick(note, mood, itemViewBinding, fragment)}">
+        android:onClick="@{() -> fragment.onItemClick(note)}">
 
         <ImageView
             android:id="@+id/image_view"
@@ -52,7 +43,7 @@
             app:layout_constraintTop_toBottomOf="@+id/image_view" />
 
         <TextView
-            android:id="@+id/tv_moodRating"
+            android:id="@+id/tv_mood_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -73,7 +64,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_mood" />
 
         <TextView
-            android:id="@+id/tv_currentDate"
+            android:id="@+id/tv_current_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
